# tracker

./: .gitignore  configure.ac
pythonsrc/: somaTrackerPipeline.py  tracker-core.py  tracker-viewer.py  trackerViewer.glade
src/: Makefile.am  gstsomacameraevent.c  gstsomacameraevent.h  gstsomacmml2text.c  gstsomacmml2text.h  gstsomapos2text.c  gstsomapos2text.h  gstsomaposoverlay.c  gstsomaposoverlay.h  gstsomasynctracker.c  gstsomasynctracker.h  gstsomatracker.c  utils.c  utils.h
tests/: test_pipeline
tools/: make_element
